# ProseForge

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Dockerfile  FIX_PLAN.md  INSTALL.md  LICENSE  README.md  VERSION  alembic.ini  compose.prod.yaml  compose.test.yaml  compose.yaml  config.example.json  fix_backslash.py  install.bat  install.sh  install_plugin.py  novel.py  pyproject.toml  requirements-api.txt  requirements-rag.txt  run_demo.bat  run_demo.sh  run_report.bat  run_report.sh  run_status.bat  run_status.sh  run_tests.sh  skeleton.example.json  start.py  version.py  一键启动.bat
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
api/: SUMMARY.md  deps.py  main.py
artifacts/: BATCH_VALIDATION_V1.5_B1.md  BATCH_VALIDATION_V1.5_B2.md  BATCH_VALIDATION_V1.5_B3.md  BATCH_VALIDATION_V1.5_B4.md  BATCH_VALIDATION_V2_B1.md  BATCH_VALIDATION_V2_B2.md  BATCH_VALIDATION_V2_B3.md  BATCH_VALIDATION_V2_B4.md  BATCH_VALIDATION_V3_B1.md  BATCH_VALIDATION_V3_B2.md  BATCH_VALIDATION_V3_B3.md  BATCH_VALIDATION_V3_B4.md  GROK_BASELINE_AUDIT.md  GROK_FINAL_VALIDATION.md  V1_5_NATIVE_VALIDATION.md  V2_CHAT_WORKSPACE_VALIDATION.md  V2_FINAL_VALIDATION.md  V3_AGENT_SWARM_VALIDATION.md  V3_FAULT_INJECTION_STATUS.md  V3_FINAL_VALIDATION.md  VALIDATION_STATUS.md  WEB_V1_INCREMENTAL_VALIDATION.md  WEB_V1_TEST_REPORT.md  api-pytest.xml  contract-pytest.xml  migration-pytest.xml  pytest.xml  recovery-pytest.xml  trivy-fs.sarif  v1.5-baseline.json  v1.5-baseline.txt  v2-export-evidence.json  v2-openapi.json  v2-request-ids.json  v2-schema-check.txt  v3-openapi.json
configs/: agents.yaml  genre_config.example.yaml  rag.example.yaml  scc_menu.json
database/: schema.sql
docker/: api.Dockerfile  entrypoint-api.sh  entrypoint-test.sh  legacy-test.Dockerfile  nginx.conf  test.Dockerfile  web.Dockerfile  worker.Dockerfile
docs/: BACKUP_RESTORE.md  DISCLAIMER.md  DOCKER_TESTING.md  GUARD_REGISTRY.md  HERMES_AGENT_RULES.md  HERMES_ASSISTANT_RULES.md  HUMAN_GRADE_REVISION_SUITE.md  INSTALL.md  LEGACY_MIGRATION.md  MCP_CN_GUIDE.md  MODEL_PROVIDERS.md  PERPLEXITY_QGP.md  PRIVACY.md  README_FULL.md  REPORT_EXAMPLES.md  REVISION_LOOP.md  ROADMAP.md  SCC_USER_MENU.md  SECURITY.md  TROUBLESHOOTING.md  USER_GUIDE_CN.md  agent_execution_proof.md  agent_iteration_budget.md  architecture.md  behavior-spec.md  character_voice_action_proof_system.md  database.md  guard_interface_contract.md  pipeline.md  setup-guide.md  web_v1_architecture.md
frontend/: index.html  package-lock.json  package.json
genre_packs/: comedy.yaml  fantasy.yaml  generic.yaml  horror.yaml  military.yaml  mystery.yaml  romance.yaml  sci_fi.yaml  system.yaml  tomb_raider.yaml  urban.yaml  urban_fantasy.yaml  western_fantasy.yaml  wuxia.yaml  xianxia.yaml
mcp_server/: __init__.py  audit.py  command_runner.py  menu_provider.py  safety.py  schemas.py  server.py  tools.py
packaging/: __init__.py  manifest.py  native_bundle.py  native_entry.py
proseforge/: __init__.py  settings.py  version.py
scripts/: __init__.py  agent_run_guard.py  (+45 more)
(+1058 files in other folders)
