[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proseforge"
version = "1.1.0"
description = "AI-powered long-form novel engineering pipeline"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.9,<3",
    "orjson>=3.10,<4",
    "structlog>=25.1,<26",
    "zstandard>=0.23,<1",
    "pyyaml>=6,<7",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.116,<1",
    "uvicorn[standard]>=0.35,<1",
    "sqlalchemy[asyncio]>=2.0.41,<3",
    "asyncpg>=0.30,<1",
    "psycopg[binary]>=3.2,<4",
    "alembic>=1.16,<2",
    "pgvector>=0.4,<1",
    "httpx>=0.28,<1",
    "python-multipart>=0.0.20,<1",
    "cryptography>=46.0.7,<49",
    "passlib[argon2]>=1.7,<2",
    "pyjwt>=2.10,<3",
    "redis>=6,<7",
    "celery[redis]>=5.5,<6",
]
worker = [
    "celery[redis]>=5.5,<6",
]
legacy = [
    "chromadb>=1,<2",
    "sentence-transformers>=4,<6",
]
rag = [
    "chromadb>=1,<2",
    "sentence-transformers>=4,<6",
]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1,<2",
    "pytest-cov>=6,<7",
    "respx>=0.22,<1",
    "ruff>=0.12,<1",
    "mypy>=1.16,<2",
]

[project.scripts]
proseforge = "proseforge.cli.main:main"
proseforge-legacy = "src.interfaces.cli:main"

[project.urls]
Repository = "https://github.com/remacheybn408-boop/ProseForge"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers -ra"
markers = [
    "xfail_known: known failure tracked in AGENTS.md (use with reason=)",
]
filterwarnings = [
    "ignore::DeprecationWarning:google.protobuf.*",
]
